--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "react-native": "0.73.6",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.16.0",
+    "react-native-haptic-feedback": "^2.2.0",
     "react-native-paper": "^5.12.3",
     "react-native-svg": "14.1.0",
     "react-native-swipe-gestures": "^1.0.5",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "expo-haptics": "~12.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
