--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
     "@expo/metro-runtime": "~3.1.3",
+    "@react-native-community/blur": "^4.4.0",
     "expo": "~50.0.14",
     "expo-font": "~11.10.3",
+    "expo-haptics": "~12.8.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -24,7 +26,7 @@
     "react-native-svg": "14.1.0",
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-web": "~0.19.6",
-    "expo-haptics": "~12.8.1"
+    "expo-blur": "~12.9.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
