--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo/metro-runtime": "~3.1.3",
     "@react-native-community/blur": "^4.4.0",
     "expo": "~50.0.14",
+    "expo-blur": "~12.9.2",
     "expo-font": "~11.10.3",
     "expo-haptics": "~12.8.1",
     "expo-status-bar": "~1.11.1",
@@ -22,11 +23,11 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-haptic-feedback": "^2.2.0",
+    "react-native-image-picker": "^7.1.2",
     "react-native-paper": "^5.12.3",
     "react-native-svg": "14.1.0",
     "react-native-swipe-gestures": "^1.0.5",
-    "react-native-web": "~0.19.6",
-    "expo-blur": "~12.9.2"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
