--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "@expo-google-fonts/roboto": "^0.2.3",
     "@expo/metro-runtime": "~3.1.3",
     "@react-native-community/blur": "^4.4.0",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
     "expo": "~50.0.14",
     "expo-blur": "~12.9.2",
+    "expo-camera": "~14.1.3",
     "expo-font": "~11.10.3",
     "expo-haptics": "~12.8.1",
     "expo-status-bar": "~1.11.1",
@@ -25,7 +29,9 @@
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-paper": "^5.12.3",
-    "react-native-svg": "14.1.0",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
+    "react-native-svg": "^14.1.0",
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-web": "~0.19.6"
   },
