--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "axios": "^1.6.8",
     "expo": "~50.0.14",
     "expo-blur": "~12.9.2",
     "expo-camera": "~14.1.3",
+    "expo-file-system": "~16.0.9",
     "expo-font": "~11.10.3",
     "expo-haptics": "~12.8.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-image-picker": "^7.1.2",
@@ -32,6 +35,7 @@
     "react-native-screens": "^3.31.1",
     "react-native-svg": "^14.1.0",
     "react-native-swipe-gestures": "^1.0.5",
+    "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
