--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.8",
     "expo": "~50.0.14",
     "expo-blur": "~12.9.2",
@@ -27,7 +28,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "^2.16.0",
+    "react-native-gesture-handler": "^2.16.1",
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-paper": "^5.12.3",
