--- a/package.json
+++ b/package.json
@@ -4,27 +4,37 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
     "@expo/metro-runtime": "~3.1.3",
     "@react-native-community/blur": "^4.4.0",
+    "@react-native-firebase/analytics": "^19.2.2",
+    "@react-native-firebase/app": "^19.2.2",
+    "@react-native-firebase/firestore": "^19.2.2",
+    "@react-native-firebase/storage": "^19.2.2",
     "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.8",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "expo": "~50.0.14",
     "expo-blur": "~12.9.2",
     "expo-camera": "~14.1.3",
+    "expo-dev-client": "~3.3.11",
     "expo-file-system": "~16.0.9",
     "expo-font": "~11.10.3",
     "expo-haptics": "~12.8.1",
     "expo-status-bar": "~1.11.1",
+    "express": "^4.19.2",
+    "firebase": "^10.11.1",
+    "mongoose": "^8.3.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
