save functionality added

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ DB_USERNAME=adityakuma0308
 DB_PASSWORD=zwVhRygCQZArhQhc
 CLUSTER_URL=cluster0.l3f9wif.mongodb.net
 DB_NAME=PROJECT 0
+MONGODB_URI=mongodb+srv://adityakuma0308:7CLaE1M7ZuZ2IKOr@finances.ikebao9.mongodb.net/
