--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -202,3 +202,11 @@ dependencies {
   // Add the dependencies for any other desired Firebase products
   // https://firebase.google.com/docs/android/setup#available-libraries
 }
+
+
+buildscript {
+  dependencies {
+    // Check for the latest version that supports your Firebase version
+    classpath 'com.google.gms:google-services:4.3.3'
+  }
+}
