--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo-google-fonts/roboto": "^0.2.3",
     "@expo/metro-runtime": "~3.1.3",
     "@react-native-community/blur": "^4.4.0",
+    "@react-native-community/datetimepicker": "^8.0.0",
     "@react-native-firebase/analytics": "^19.2.2",
     "@react-native-firebase/app": "^19.2.2",
     "@react-native-firebase/firestore": "^19.2.2",
@@ -34,6 +35,7 @@
     "expo-status-bar": "~1.11.1",
     "express": "^4.19.2",
     "firebase": "^10.11.1",
+    "mongodb": "^6.5.0",
     "mongoose": "^8.3.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
