--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "expo-status-bar": "~1.11.1",
     "express": "^4.19.2",
     "firebase": "^10.11.1",
+    "moment": "^2.30.1",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.3",
     "react": "18.2.0",
